--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ footer {
 
 .search-button {
   background-color: rgb(217, 217, 217);
-  border: solid 1px;
+  border: none;
   border-radius: 5px;
   font-size: 18px;
   padding: 15px 20px;
@@ -55,8 +55,8 @@ footer {
 }
 
 .city-temperature {
-  font-size: 75px;
-  padding: 30px 0px;
+  font-size: 68px;
+  padding: 40px 0px;
 }
 
 .current-conditions {
@@ -64,7 +64,7 @@ footer {
   grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
   margin: 0 auto;
-  padding: 20px 30px;
+  padding: 10px 30px 20px 30px;
   text-align: center;
   font-size: 30px;
 }
@@ -72,11 +72,11 @@ footer {
 .day-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 10px;
+  grid-gap: 15px;
   margin: 0 auto;
   background: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
-  padding: 30px 30px;
+  padding: 30px 20px;
   text-align: center;
   font-size: 18px;
 }
