--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,10 @@ footer {
   padding: 40px 0px;
 }
 
+.current-date {
+  font-size: 20px;
+}
+
 .current-conditions {
   display: grid;
   grid-template-columns: 1fr 1fr;
