--- a/src/style.css
+++ b/src/style.css
@@ -51,12 +51,17 @@ footer {
 }
 
 .weather-icon {
-  font-size: 200px;
+  width: 300px;
+  height: 300px;
 }
 
 .city-temperature {
   font-size: 68px;
   padding: 40px 0px;
+}
+
+.city-information {
+  margin-top: 30px;
 }
 
 .current-date {
