--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,12 @@ footer {
   box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.1);
 }
 
-.current-weather {
+.weather-icon {
+  width: 100px;
+  height: 100px;
+}
+
+.city-weather {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
@@ -50,18 +55,15 @@ footer {
   text-align: center;
 }
 
-.weather-icon {
-  width: 300px;
-  height: 300px;
-}
-
 .city-temperature {
   font-size: 68px;
   padding: 40px 0px;
 }
 
 .city-information {
-  margin-top: 30px;
+  margin: 0 auto;
+  padding: 15px 30px;
+  text-align: center;
 }
 
 .current-date {
