--- a/src/style.css
+++ b/src/style.css
@@ -68,6 +68,7 @@ footer {
 
 .current-date {
   font-size: 20px;
+  margin-top: 20px;
 }
 
 .current-conditions {
@@ -77,5 +78,11 @@ footer {
   margin: 0 auto;
   padding: 10px 30px 20px 30px;
   text-align: center;
-  font-size: 30px;
+  font-size: 20px;
+}
+
+.weather-forecast {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 25px;
 }
